# Shelf-Genie

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  check_env.py  demo.py  details.html  index.html  pyproject.toml  requirements.txt
.github/workflows/: azure.yml
config/: schema.yaml
frontend/css/: details.css  landing.css
frontend/html/: details.html  index.html
frontend/js/: details.js  landing.js
requirement_folder/: model.pkl  top_book.pkl
src/app/: __init__.py
src/app/routes/: api.py
src/azure/configuration/: azure_connection.py
src/azure/storage/: azure_storage.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_pusher.py  model_trainer.py  recommendation_engine.py
src/configuration/: mongodb_connection.py
src/constants/: __init__.py
src/data_access/: shelf_genie_data.py
src/entity/: artifact_entity.py  config_entity.py
src/logger/: __init__.py
src/logging/: __init__.py
src/notebook/: Book_Recommendation_System_1_0.ipynb  mongoDB.ipynb  mongodb.ipynb
src/pipeline/: training_pipeline.py
src/utils/: main_utils.py
